fix: macro | macro video 경로 수정 [S07P22D202-425]
Former-commit-id: 958e37858a586bb373b6b344097c4daf3b0b520a